...
        target: AccountDetailsTarget,
        entryIdFactory: DeepLinkEntryIdFactory = FreshDeepLinkEntryIdFactory,
    ): NavStateCreationResult = createHistory(
        routes = listOf(
            Home,
            Accounts,
            Account(target.accountId),
            AccountDetails(target.accountId),
        ),
        entryIdFactory = entryIdFactory,
    )
}

...
