appId: com.shmakov.udf
name: Reference stateful tabs journey
---
- launchApp:
    clearState: true
- assertVisible: "Go to Account #2"
- tapOn: "Account #1 local value: 0"
- assertVisible: "Account #1 local value: 1"
- tapOn: "Cards"
- assertVisible: "Card Screen #1"
- tapOn: "Card #1 local value: 0"
- assertVisible: "Card #1 local value: 1"
- tapOn: "Accounts"
- assertVisible: "Account #1 local value: 1"
- back
- assertVisible: "Accounts Screen"
